set(LIBTOMMATH_SRC 
                ${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/mp_2expt.c                            
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/mp_abs.c                                 
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/mp_add.c                                 
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/mp_add_d.c                               
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/mp_clamp.c                               
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/mp_clear.c                               
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/mp_clear_multi.c                         
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/mp_cmp.c                                 
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/mp_cmp_d.c                               
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/mp_cmp_mag.c                             
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/mp_cnt_lsb.c                             
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/mp_copy.c                                
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/mp_count_bits.c                          
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/mp_div_2.c                               
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/mp_div_2d.c                              
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/mp_div.c                                 
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/mp_dr_is_modulus.c                       
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/mp_dr_reduce.c                           
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/mp_dr_setup.c                            
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/mp_exch.c                                
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/mp_exptmod.c                             
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/mp_exteuclid.c                           
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/mp_gcd.c                                 
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/mp_get_i32.c                             
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/mp_get_mag_u32.c                         
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/mp_grow.c                                
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/mp_init.c                                
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/mp_init_copy.c                           
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/mp_init_multi.c                          
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/mp_init_size.c                           
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/mp_invmod.c                              
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/mp_lshd.c                                
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/mp_mod_2d.c                              
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/mp_mod.c                                 
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/mp_montgomery_calc_normalization.c       
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/mp_montgomery_reduce.c                   
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/mp_montgomery_setup.c                    
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/mp_mul_2.c                               
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/mp_mul_2d.c                              
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/mp_mul.c                                 
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/mp_mul_d.c                               
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/mp_mulmod.c                              
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/mp_neg.c                                 
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/mp_rand.c                                
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/mp_reduce_2k.c                           
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/mp_reduce_2k_l.c                         
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/mp_reduce_2k_setup.c                     
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/mp_reduce_2k_setup_l.c                   
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/mp_reduce.c                              
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/mp_reduce_is_2k.c                        
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/mp_reduce_is_2k_l.c                      
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/mp_reduce_setup.c                        
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/mp_rshd.c                                
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/mp_set.c	                               
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/mp_set_i32.c                             
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/mp_set_u32.c                             
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/mp_sub.c                                 
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/mp_sub_d.c                               
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/mp_zero.c                                
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/s_mp_add.c                               
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/s_mp_copy_digs.c                         
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/s_mp_div_3.c                             
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/s_mp_div_recursive.c                     
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/s_mp_div_school.c                        
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/s_mp_exptmod.c                           
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/s_mp_exptmod_fast.c                      
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/s_mp_invmod.c                            
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/s_mp_invmod_odd.c                        
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/s_mp_montgomery_reduce_comba.c           
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/s_mp_mul_balance.c                       
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/s_mp_mul.c                               
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/s_mp_mul_comba.c                         
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/s_mp_mul_high.c                          
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/s_mp_mul_high_comba.c                    
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/s_mp_mul_karatsuba.c                     
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/s_mp_mul_toom.c                          
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/s_mp_sqr.c                               
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/s_mp_sqr_comba.c                         
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/s_mp_sqr_karatsuba.c                     
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/s_mp_sqr_toom.c                          
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/s_mp_sub.c                               
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/s_mp_zero_buf.c                          
				${PROJECT_SOURCE_DIR}/${LIBTOMMATH_PATH}/s_mp_zero_digs.c
)

add_library(libtommath ${LIBTOMMATH_SRC})
target_include_directories(mbcrypt_src PUBLIC /home/user/Projects/devs/mbedCrypto/lib/libtommath)
